--- a/support/js/test-repl.html
+++ b/support/js/test-repl.html
@@ -41,7 +41,7 @@ function resetRepl() {
     prompt.value = "";
     _namespace = new Namespace();
     _pinfo = get_dash_base_dash_pinfo(
-        org.plt.types.Symbol.makeInstance("moby"));
+        plt.types.Symbol.makeInstance("moby"));
 }
 
 
